test/type/fail/concat_wrong.j
class A{
  Void main() {
    String a;
    a = "a" + (5);
    return;
  }
}
